--- a/examples/01-树图/01-紧凑树/01-紧凑树-1.html
+++ b/examples/01-树图/01-紧凑树/01-紧凑树-1.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>紧凑树</title>
     <style>
         #container {
             width: calc(100vw - 50px);
             height: calc(100vh - 50px);
         }
     </style>
-    <script src="../../lib/g6.min.js"></script>
-    <script src="../00-mock/data-1.js"></script>
+    <script src="../../../lib/g6.min.js"></script>
+    <script src="../../00-mock/data-1.js"></script>
 </head>
 
 <body>
@@ -25,16 +25,15 @@
             container: 'container',
             width,
             height,
-            linkCenter: true,
             modes: {
                 default: [
                     {
                         type: 'collapse-expand',
-                        onChange: function onChange(item, collapsed) {
-                            const data = item.get('model').data;
-                            data.collapsed = collapsed;
-                            return true;
-                        },
+                        // onChange: function onChange(item, collapsed) {
+                        //     const data = item.get('model').data;
+                        //     data.collapsed = collapsed;
+                        //     return true;
+                        // },
                     },
                     'drag-canvas',
                     'zoom-canvas',
@@ -52,14 +51,14 @@
                 },
             },
             defaultEdge: {
-                type: 'cubic-vertical',
+                type: 'cubic-horizontal',
                 style: {
                     stroke: '#A3B1BF',
                 },
             },
             layout: {
                 type: 'compactBox',
-                direction: 'TB',
+                direction: 'LR',
                 getId: function getId(d) {
                     return d.id;
                 },
@@ -70,30 +69,20 @@
                     return 16;
                 },
                 getVGap: function getVGap() {
-                    return 80;
+                    return 10;
                 },
                 getHGap: function getHGap() {
-                    return 20;
+                    return 100;
                 },
             },
         });
 
         graph.node(function (node) {
-            let position = 'right';
-            let rotate = 0;
-            if (!node.children) {
-                position = 'bottom';
-                rotate = Math.PI / 2;
-            }
             return {
                 label: node.id,
                 labelCfg: {
-                    position,
-                    offset: 5,
-                    style: {
-                        rotate,
-                        textAlign: 'start',
-                    },
+                    offset: 10,
+                    position: node.children && node.children.length > 0 ? 'left' : 'right',
                 },
             };
         });
