--- a/examples/01-树图/01-紧凑树/01-紧凑树-2.html
+++ b/examples/01-树图/01-紧凑树/01-紧凑树-2.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>至上而下的紧凑树</title>
     <style>
         #container {
             width: calc(100vw - 50px);
             height: calc(100vh - 50px);
         }
     </style>
-    <script src="../../lib/g6.min.js"></script>
-    <script src="../00-mock/data-1.js"></script>
+    <script src="../../../lib/g6.min.js"></script>
+    <script src="../../00-mock/data-1.js"></script>
 </head>
 
 <body>
@@ -25,6 +25,7 @@
             container: 'container',
             width,
             height,
+            linkCenter: true,
             modes: {
                 default: [
                     {
@@ -51,52 +52,48 @@
                 },
             },
             defaultEdge: {
-                type: 'cubic-horizontal',
+                type: 'cubic-vertical',
                 style: {
                     stroke: '#A3B1BF',
                 },
             },
             layout: {
-                type: 'mindmap',
-                direction: 'H',
-                getHeight: () => {
+                type: 'compactBox',
+                direction: 'TB',
+                getId: function getId(d) {
+                    return d.id;
+                },
+                getHeight: function getHeight() {
                     return 16;
                 },
-                getWidth: () => {
+                getWidth: function getWidth() {
                     return 16;
                 },
-                getVGap: () => {
-                    return 10;
+                getVGap: function getVGap() {
+                    return 80;
                 },
-                getHGap: () => {
-                    return 50;
-                },
-                getSide: (d) => {
-                    // 节点会在根节点的左侧
-                    if (d.id === 'Classification') {
-                        return 'left';
-                    }
-                    return 'right';
+                getHGap: function getHGap() {
+                    return 20;
                 },
             },
         });
 
-        let centerX = 0;
         graph.node(function (node) {
-            if (node.id === 'Modeling Methods') {
-                centerX = node.x;
+            let position = 'right';
+            let rotate = 0;
+            if (!node.children) {
+                position = 'bottom';
+                rotate = Math.PI / 2;
             }
-
             return {
                 label: node.id,
                 labelCfg: {
-                    position:
-                        node.children && node.children.length > 0
-                            ? 'left'
-                            : node.x > centerX
-                                ? 'right'
-                                : 'left',
+                    position,
                     offset: 5,
+                    style: {
+                        rotate,
+                        textAlign: 'start',
+                    },
                 },
             };
         });
