--- a/examples/01-树图/02-生态树/02-生态树-1.html
+++ b/examples/01-树图/02-生态树/02-生态树-1.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>生态树</title>
     <style>
         #container {
             width: calc(100vw - 50px);
             height: calc(100vh - 50px);
         }
     </style>
-    <script src="../../lib/g6.min.js"></script>
-    <script src="../00-mock/data-1.js"></script>
+    <script src="../../../lib/g6.min.js"></script>
+    <script src="../../00-mock/data-1.js"></script>
 </head>
 
 <body>
@@ -57,41 +57,18 @@
                 },
             },
             layout: {
-                type: 'mindmap',
-                direction: 'H',
-                getHeight: () => {
-                    return 16;
-                },
-                getWidth: () => {
-                    return 16;
-                },
-                getVGap: () => {
-                    return 10;
-                },
-                getHGap: () => {
-                    return 100;
-                },
-                getSide: () => {
-                    return 'right';
-                },
+                type: 'dendrogram',
+                direction: 'LR', // H / V / LR / RL / TB / BT
+                nodeSep: 30,
+                rankSep: 100,
             },
         });
 
-        let centerX = 0;
         graph.node(function (node) {
-            if (node.id === 'Modeling Methods') {
-                centerX = node.x;
-            }
-
             return {
                 label: node.id,
                 labelCfg: {
-                    position:
-                        node.children && node.children.length > 0
-                            ? 'right'
-                            : node.x > centerX
-                                ? 'right'
-                                : 'left',
+                    position: node.children && node.children.length > 0 ? 'left' : 'right',
                     offset: 5,
                 },
             };
