--- a/examples/01-树图/02-生态树/02-生态树-2.html
+++ b/examples/01-树图/02-生态树/02-生态树-2.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>至上而下的生态树</title>
     <style>
         #container {
             width: calc(100vw - 50px);
             height: calc(100vh - 50px);
         }
     </style>
-    <script src="../../lib/g6.min.js"></script>
-    <script src="../00-mock/data-1.js"></script>
+    <script src="../../../lib/g6.min.js"></script>
+    <script src="../../00-mock/data-1.js"></script>
 </head>
 
 <body>
@@ -42,41 +42,46 @@
             },
             defaultNode: {
                 size: 26,
+                anchorPoints: [
+                    [0, 0.5],
+                    [1, 0.5],
+                ],
                 style: {
                     fill: '#C6E5FF',
                     stroke: '#5B8FF9',
                 },
             },
             defaultEdge: {
+                type: 'cubic-vertical',
                 style: {
                     stroke: '#A3B1BF',
                 },
             },
             layout: {
-                type: 'compactBox',
-                direction: 'RL',
-                getId: function getId(d) {
-                    return d.id;
-                },
-                getHeight: () => {
-                    return 26;
-                },
-                getWidth: () => {
-                    return 26;
-                },
-                getVGap: () => {
-                    return 20;
-                },
-                getHGap: () => {
-                    return 30;
-                },
-                radial: true,
+                type: 'dendrogram',
+                direction: 'TB', // H / V / LR / RL / TB / BT
+                nodeSep: 40,
+                rankSep: 100,
             },
         });
 
         graph.node(function (node) {
+            let position = 'right';
+            let rotate = 0;
+            if (!node.children) {
+                position = 'bottom';
+                rotate = Math.PI / 2;
+            }
             return {
                 label: node.id,
+                labelCfg: {
+                    position,
+                    offset: 5,
+                    style: {
+                        rotate,
+                        textAlign: 'start',
+                    },
+                },
             };
         });
 
