--- a/examples/01-树图/04-缩进树/04-缩进树-3.html
+++ b/examples/01-树图/04-缩进树/04-缩进树-3.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>缩进树-子节点两侧分布</title>
     <style>
         #container {
             width: calc(100vw - 50px);
             height: calc(100vh - 50px);
         }
     </style>
-    <script src="../../lib/g6.min.js"></script>
-    <script src="../00-mock/data-1.js"></script>
+    <script src="../../../lib/g6.min.js"></script>
+    <script src="../../00-mock/data-1.js"></script>
 </head>
 
 <body>
@@ -25,45 +25,56 @@
             container: 'container',
             width,
             height,
-            linkCenter: true,
-            modes: {
-                default: [
-                    {
-                        type: 'collapse-expand',
-                        onChange: function onChange(item, collapsed) {
-                            const data = item.get('model').data;
-                            data.collapsed = collapsed;
-                            return true;
-                        },
-                    },
-                    'drag-canvas',
-                    'zoom-canvas',
-                ],
-            },
             defaultNode: {
                 size: 26,
+                anchorPoints: [
+                    [0, 0.5],
+                    [1, 0.5],
+                ],
                 style: {
                     fill: '#C6E5FF',
                     stroke: '#5B8FF9',
                 },
             },
             defaultEdge: {
+                type: 'cubic-horizontal',
                 style: {
                     stroke: '#A3B1BF',
                 },
             },
             layout: {
-                type: 'dendrogram',
-                direction: 'LR',
-                nodeSep: 20,
-                rankSep: 100,
-                radial: true,
+                type: 'indented',
+                direction: 'H',
+                indent: 80,
+                getHeight: () => {
+                    return 10;
+                },
+                getWidth: () => {
+                    return 10;
+                },
+                getSide: (d) => {
+                    if (d.id === 'Regression' || d.id === 'Classification') return 'left';
+                    return 'right';
+                },
             },
         });
 
+        let centerX = 0;
         graph.node(function (node) {
+            if (node.id === 'Modeling Methods') {
+                centerX = node.x;
+            }
             return {
                 label: node.id,
+                labelCfg: {
+                    position:
+                        node.children && node.children.length > 0
+                            ? 'left'
+                            : node.x > centerX
+                                ? 'right'
+                                : 'left',
+                    offset: 5,
+                },
             };
         });
 
