--- a/examples/01-树图/05-辐射树/05-辐射树-1.html
+++ b/examples/01-树图/05-辐射树/05-辐射树-1.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>生态辐射树</title>
     <style>
         #container {
             width: calc(100vw - 50px);
             height: calc(100vh - 50px);
         }
     </style>
-    <script src="../../lib/g6.min.js"></script>
-    <script src="../00-mock/data-1.js"></script>
+    <script src="../../../lib/g6.min.js"></script>
+    <script src="../../00-mock/data-1.js"></script>
 </head>
 
 <body>
@@ -25,6 +25,7 @@
             container: 'container',
             width,
             height,
+            linkCenter: true,
             modes: {
                 default: [
                     {
@@ -41,56 +42,28 @@
             },
             defaultNode: {
                 size: 26,
-                anchorPoints: [
-                    [0, 0.5],
-                    [1, 0.5],
-                ],
                 style: {
                     fill: '#C6E5FF',
                     stroke: '#5B8FF9',
                 },
             },
             defaultEdge: {
-                type: 'cubic-horizontal',
                 style: {
                     stroke: '#A3B1BF',
                 },
             },
             layout: {
-                type: 'mindmap',
-                direction: 'H',
-                getHeight: () => {
-                    return 16;
-                },
-                getWidth: () => {
-                    return 16;
-                },
-                getVGap: () => {
-                    return 10;
-                },
-                getHGap: () => {
-                    return 50;
-                },
+                type: 'dendrogram',
+                direction: 'LR',
+                nodeSep: 20,
+                rankSep: 100,
+                radial: true,
             },
         });
 
-        let centerX = 0;
         graph.node(function (node) {
-            if (node.id === 'Modeling Methods') {
-                centerX = node.x;
-            }
-
             return {
                 label: node.id,
-                labelCfg: {
-                    position:
-                        node.children && node.children.length > 0
-                            ? 'left'
-                            : node.x > centerX
-                                ? 'right'
-                                : 'left',
-                    offset: 5,
-                },
             };
         });
 
