--- a/examples/01-树图/06-定制树图/06-定制树图-3.html
+++ b/examples/01-树图/06-定制树图/06-定制树图-3.html
@@ -4,16 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>自定义复杂树图样式</title>
     <style>
         #container {
             width: calc(100vw - 50px);
             height: calc(100vh - 50px);
         }
     </style>
-    <script src="../../lib/g6.min.js"></script>
-    <!-- <script src="../00-mock/data-1.js"></script> -->
-    <script src="../00-mock/data-2.js"></script>
+    <script src="../../../lib/g6.min.js"></script>
+    <!-- <script src="../../00-mock/data-1.js"></script> -->
+    <script src="../../00-mock/data-2.js"></script>
 </head>
 
 <body>
