--- a/examples/07-力导向图/07-力导向图-2.html
+++ b/examples/07-力导向图/07-力导向图-2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>力导向布局防止节点重叠</title>
     <style>
         #container {
             width: calc(100vw - 50px);
