--- a/examples/10-Radial辐射布局/10-Radial辐射布局-5.html
+++ b/examples/10-Radial辐射布局/10-Radial辐射布局-5.html
@@ -29,387 +29,86 @@
     <div id="container"></div>
     <script>
         const data = {
-            nodes: [
+            "nodes": [
                 {
-                    id: '0',
-                    label: '0',
+                    "id": "8264",
+                    "icon": "/scopa/console/icon/getIconById?iconId=15",
+                    "name": "吴彬",
+                    "position": "商软冠联网络有限公司",
+                    "entityGroup": "person"
                 },
                 {
-                    id: '1',
-                    label: '1',
+                    "id": "2048004176",
+                    "icon": "/scopa/console/icon/getIconById?iconId=15",
+                    "name": "马智辰",
+                    "position": "华远软件信息有限公司",
+                    "entityGroup": "person"
                 },
                 {
-                    id: '2',
-                    label: '2',
+                    "id": "16456",
+                    "icon": "/scopa/console/icon/getIconById?iconId=15",
+                    "name": "王娟a",
+                    "position": "同兴万点网络有限公司",
+                    "entityGroup": "person"
                 },
                 {
-                    id: '3',
-                    label: '3',
+                    "id": "8424",
+                    "icon": "/scopa/console/icon/getIconById?iconId=15",
+                    "name": "董伟",
+                    "position": "南康传媒有限公司",
+                    "entityGroup": "person"
                 },
                 {
-                    id: '4',
-                    label: '4',
+                    "id": "4144",
+                    "icon": "/scopa/console/icon/getIconById?iconId=1",
+                    "name": "襄樊地球村信息有限公司",
+                    "position": [
+                        "软件服务；信息技术"
+                    ],
+                    "entityGroup": "organ"
                 },
                 {
-                    id: '5',
-                    label: '5',
+                    "id": "4112",
+                    "icon": "/scopa/console/icon/getIconById?iconId=15",
+                    "name": "周平",
+                    "position": "创亿信息有限公司",
+                    "entityGroup": "person"
                 },
                 {
-                    id: '6',
-                    label: '6',
-                },
-                {
-                    id: '7',
-                    label: '7',
-                },
-                {
-                    id: '8',
-                    label: '8',
-                },
-                {
-                    id: '9',
-                    label: '9',
-                },
-                {
-                    id: '10',
-                    label: '10',
-                },
-                {
-                    id: '11',
-                    label: '11',
-                },
-                {
-                    id: '12',
-                    label: '12',
-                },
-                {
-                    id: '13',
-                    label: '13',
-                },
-                {
-                    id: '14',
-                    label: '14',
-                },
-                {
-                    id: '15',
-                    label: '15',
-                },
-                {
-                    id: '16',
-                    label: '16',
-                },
-                {
-                    id: '17',
-                    label: '17',
-                },
-                {
-                    id: '18',
-                    label: '18',
-                },
-                {
-                    id: '19',
-                    label: '19',
-                },
-                {
-                    id: '20',
-                    label: '20',
-                },
-                {
-                    id: '21',
-                    label: '21',
-                },
-                {
-                    id: '22',
-                    label: '22',
-                },
-                {
-                    id: '23',
-                    label: '23',
-                },
-                {
-                    id: '24',
-                    label: '24',
-                },
-                {
-                    id: '25',
-                    label: '25',
-                },
-                {
-                    id: '26',
-                    label: '26',
-                },
-                {
-                    id: '27',
-                    label: '27',
-                },
-                {
-                    id: '28',
-                    label: '28',
-                },
-                {
-                    id: '29',
-                    label: '29',
-                },
-                {
-                    id: '30',
-                    label: '30',
-                },
-                {
-                    id: '31',
-                    label: '31',
-                },
-                {
-                    id: '32',
-                    label: '32',
-                },
-                {
-                    id: '33',
-                    label: '33',
-                },
+                    "id": "4304",
+                    "icon": "/scopa/console/icon/getIconById?iconId=15",
+                    "name": "黄明",
+                    "position": "国讯传媒有限公司",
+                    "entityGroup": "person"
+                }
             ],
-            edges: [
+            "edges": [
                 {
-                    source: '0',
-                    target: '1',
+                    "source": "8264",
+                    "target": "4144"
                 },
                 {
-                    source: '0',
-                    target: '2',
+                    "source": "16456",
+                    "target": "4144"
                 },
                 {
-                    source: '0',
-                    target: '3',
+                    "source": "8424",
+                    "target": "4144"
                 },
                 {
-                    source: '0',
-                    target: '4',
+                    "source": "4304",
+                    "target": "4144"
                 },
                 {
-                    source: '0',
-                    target: '5',
+                    "source": "2048004176",
+                    "target": "4144"
                 },
                 {
-                    source: '0',
-                    target: '7',
-                },
-                {
-                    source: '0',
-                    target: '8',
-                },
-                {
-                    source: '0',
-                    target: '9',
-                },
-                {
-                    source: '0',
-                    target: '10',
-                },
-                {
-                    source: '0',
-                    target: '11',
-                },
-                {
-                    source: '0',
-                    target: '13',
-                },
-                {
-                    source: '0',
-                    target: '14',
-                },
-                {
-                    source: '0',
-                    target: '15',
-                },
-                {
-                    source: '0',
-                    target: '16',
-                },
-                {
-                    source: '2',
-                    target: '3',
-                },
-                {
-                    source: '4',
-                    target: '5',
-                },
-                {
-                    source: '4',
-                    target: '6',
-                },
-                {
-                    source: '5',
-                    target: '6',
-                },
-                {
-                    source: '7',
-                    target: '13',
-                },
-                {
-                    source: '8',
-                    target: '14',
-                },
-                {
-                    source: '9',
-                    target: '10',
-                },
-                {
-                    source: '10',
-                    target: '22',
-                },
-                {
-                    source: '10',
-                    target: '14',
-                },
-                {
-                    source: '10',
-                    target: '12',
-                },
-                {
-                    source: '10',
-                    target: '24',
-                },
-                {
-                    source: '10',
-                    target: '21',
-                },
-                {
-                    source: '10',
-                    target: '20',
-                },
-                {
-                    source: '11',
-                    target: '24',
-                },
-                {
-                    source: '11',
-                    target: '22',
-                },
-                {
-                    source: '11',
-                    target: '14',
-                },
-                {
-                    source: '12',
-                    target: '13',
-                },
-                {
-                    source: '16',
-                    target: '17',
-                },
-                {
-                    source: '16',
-                    target: '18',
-                },
-                {
-                    source: '16',
-                    target: '21',
-                },
-                {
-                    source: '16',
-                    target: '22',
-                },
-                {
-                    source: '17',
-                    target: '18',
-                },
-                {
-                    source: '17',
-                    target: '20',
-                },
-                {
-                    source: '18',
-                    target: '19',
-                },
-                {
-                    source: '19',
-                    target: '20',
-                },
-                {
-                    source: '19',
-                    target: '33',
-                },
-                {
-                    source: '19',
-                    target: '22',
-                },
-                {
-                    source: '19',
-                    target: '23',
-                },
-                {
-                    source: '20',
-                    target: '21',
-                },
-                {
-                    source: '21',
-                    target: '22',
-                },
-                {
-                    source: '22',
-                    target: '24',
-                },
-                {
-                    source: '22',
-                    target: '25',
-                },
-                {
-                    source: '22',
-                    target: '26',
-                },
-                {
-                    source: '22',
-                    target: '23',
-                },
-                {
-                    source: '22',
-                    target: '28',
-                },
-                {
-                    source: '22',
-                    target: '30',
-                },
-                {
-                    source: '22',
-                    target: '31',
-                },
-                {
-                    source: '22',
-                    target: '32',
-                },
-                {
-                    source: '22',
-                    target: '33',
-                },
-                {
-                    source: '23',
-                    target: '28',
-                },
-                {
-                    source: '23',
-                    target: '27',
-                },
-                {
-                    source: '23',
-                    target: '29',
-                },
-                {
-                    source: '23',
-                    target: '30',
-                },
-                {
-                    source: '23',
-                    target: '31',
-                },
-                {
-                    source: '23',
-                    target: '33',
-                },
-                {
-                    source: '32',
-                    target: '33',
-                },
-            ],
-        };
+                    "source": "4112",
+                    "target": "4144"
+                }
+            ]
+        }
 
         const descriptionDiv = document.createElement('div');
         descriptionDiv.innerHTML =
@@ -429,9 +128,12 @@
             },
             layout: {
                 type: 'radial',
+                preventOverlap: true,
                 unitRadius: 50,
+                nodeSize: 40,
             },
             animate: true,
+            fitView: true,
             defaultNode: {
                 size: 20,
                 style: {
@@ -443,22 +145,38 @@
             defaultEdge: {
                 size: 1,
                 color: '#e2e2e2',
-                style: {
-                    endArrow: {
-                        path: 'M 0,0 L 8,4 L 8,-4 Z',
-                        fill: '#e2e2e2',
-                    },
-                },
+                // style: {
+                //     endArrow: {
+                //         path: 'M 0,0 L 8,4 L 8,-4 Z',
+                //         fill: '#e2e2e2',
+                //     },
+                // },
             },
         });
         graph.data(data);
         graph.render();
 
-        layoutConfigTranslation();
+                                            setTimeout(function () {
+                                                //     descriptionDiv.innerHTML =
+                                                //         'Radial layout, focusNode =  = 0, unitRadius = 80, preventOverlap: true';
+                                                //     graph.updateLayout({
+                                                //         preventOverlap: true,
+                                                //         unitRadius: 200,
+                                                //         nodeSize: 80,
+                                                //         // focusNode: '10',
+                                                //     });
 
-        setInterval(function () {
-            layoutConfigTranslation();
-        }, 7000);
+                                                graph.fitCenter()
+                                                graph.fitView()
+                                            }, 600);
+
+
+
+        // layoutConfigTranslation();
+
+        // setInterval(function () {
+        //     layoutConfigTranslation();
+        // }, 7000);
 
         function layoutConfigTranslation() {
             setTimeout(function () {
