--- a/examples/01-树图/01-紧凑树/01-紧凑树-1-demo5/01-紧凑树-1-demo5.html
+++ b/examples/01-树图/01-紧凑树/01-紧凑树-1-demo5/01-紧凑树-1-demo5.html
@@ -26,8 +26,8 @@
 <body>
     <!-- 1. 创建容器 -->
     <div id="container"></div>
-    <button id="left" onClick="dragLeft()">left</button>
-    <button id="right" onClick="dragRight()">right</button>
+    <button id="left">left</button>
+    <button id="right">right</button>
     <!-- <script src="./data-4144.js"></script> -->
     <!-- <script src="./data-2048102624.js"></script> -->
     <!-- <script src="./data-2048155872.js"></script> -->
