平移实现原大小

--- a/examples/01-树图/01-紧凑树/01-紧凑树-1-demo5/01-紧凑树-1-demo5.html
+++ b/examples/01-树图/01-紧凑树/01-紧凑树-1-demo5/01-紧凑树-1-demo5.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>紧凑树</title>
     <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+        
         #container {
             width: calc(100vw - 100px);
             /* height: calc(100vh - 100px); */
