添加移动动画

--- a/examples/01-树图/01-紧凑树/01-紧凑树-1-demo5/01-紧凑树-1-demo5.html
+++ b/examples/01-树图/01-紧凑树/01-紧凑树-1-demo5/01-紧凑树-1-demo5.html
@@ -10,7 +10,7 @@
             margin: 0;
             padding: 0;
         }
-        
+
         #container {
             width: calc(100vw - 100px);
             /* height: calc(100vh - 100px); */
@@ -25,6 +25,7 @@
         }
     </style>
     <script src="../../../../lib/g6.min.js"></script>
+    <script src="./lib/tween.js"></script>
     <!-- <script src="../../../00-mock/data-1.js"></script> -->
 </head>
 
