--- a/examples/02-一般图/07-力导向图/07-力导向图-3-气泡图.html
+++ b/examples/02-一般图/07-力导向图/07-力导向图-3-气泡图.html
@@ -23,27 +23,27 @@
             nodes: [
                 {
                     "id": "4",
-                    "label": "AFG",
+                    "label": "4",
                     // "year": 2012,
                 },
                 {
                     "id": "8",
-                    "label": "ALB",
+                    "label": "8",
                     // "year": 2012,
                 },
                 {
                     "id": "10",
-                    "label": "ATA",
+                    "label": "10",
                     // "year": 2012,
                 },
                 {
                     "id": "12",
-                    "label": "DZA",
+                    "label": "12",
                     // "year": 2012,
                 },
                 {
                     "id": "16",
-                    "label": "ASM",
+                    "label": "16",
                     // "year": 2012,
                 },
             ].map(item => ({ ...item, size: 20 + Math.floor(Math.random() * 100)})),
