--- a/examples/02-一般图/10-Radial辐射布局/10-Radial辐射布局-1.html
+++ b/examples/02-一般图/10-Radial辐射布局/10-Radial辐射布局-1.html
@@ -410,7 +410,6 @@
                 },
             ],
         };
-
         const width = document.getElementById('container').scrollWidth;
         const height = document.getElementById('container').scrollHeight || 500;
         const graph = new G6.Graph({
@@ -423,35 +422,38 @@
             layout: {
                 type: 'radial',
                 unitRadius: 50,
-                preventOverlap: true,
-                maxPreventOverlapIteration: 100,
             },
             animate: true,
             defaultNode: {
-                style: {
-                    lineWidth: 2,
-                    fill: '#C6E5FF',
-                    stroke: '#5B8FF9',
-                },
+                size: 20,
             },
-            defaultEdge: {
-                size: 1,
-                color: '#e2e2e2',
-                style: {
-                    endArrow: {
-                        path: 'M 0,0 L 8,4 L 8,-4 Z',
-                        fill: '#e2e2e2',
-                    },
-                },
-            },
-        });
-
-        const nodes = data.nodes;
-        nodes.forEach((node) => {
-            node.size = Math.random() * 20 + 10;
         });
         graph.data(data);
         graph.render();
+
+    // 这样可以刷新节点的位置,不然拖拽不动
+    /*
+    在这人拖动会恢复原位
+    const forceLayout = graph.get('layoutController').layoutMethod;
+    graph.on('node:dragstart', function (e) {
+        graph.layout();
+        refreshDragedNodePosition(e);
+    });
+    graph.on('node:drag', function (e) {
+        forceLayout.execute();
+        refreshDragedNodePosition(e);
+    });
+    graph.on('node:dragend', function (e) {
+        e.item.get('model').fx = null;
+        e.item.get('model').fy = null;
+    });
+
+    function refreshDragedNodePosition(e) {
+        const model = e.item.get('model');
+        model.fx = e.x;
+        model.fy = e.y;
+    }
+    */
     </script>
 </body>
 
