--- a/examples/02-一般图/12-Grid网格布局/12-Grid网格布局-1.html
+++ b/examples/02-一般图/12-Grid网格布局/12-Grid网格布局-1.html
@@ -422,6 +422,7 @@
             },
             layout: {
                 type: 'grid',
+                // 网格开始位置（左上角）
                 begin: [20, 20],
                 width: width - 20,
                 height: height - 20,
