--- a/examples/03-元素/19-内置边/19-内置边-6.html
+++ b/examples/03-元素/19-内置边/19-内置边-6.html
@@ -29,7 +29,7 @@
     <div id="container"></div>
     <script>
         /**
- * The usage of built-in polyline
+ * The usage of arc edge
  * by Shiwu
  */
 
@@ -38,19 +38,38 @@
                 {
                     id: '0',
                     x: 150,
-                    y: 100,
+                    y: 50,
+                    label: '0',
                 },
                 {
                     id: '1',
                     x: 350,
-                    y: 300,
+                    y: 250,
+                    label: '1',
                 },
             ],
             edges: [
-                // Built-in polyline
+                // Built-in arc edges
                 {
+                    id: 'edge0',
                     source: '0',
                     target: '1',
+                    label: 'curveOffset = 20',
+                    curveOffset: 20,
+                },
+                {
+                    id: 'edge1',
+                    source: '0',
+                    target: '1',
+                    label: 'curveOffset = 50', // the bending degree
+                    curveOffset: 50,
+                },
+                {
+                    id: 'edge2',
+                    source: '0',
+                    target: '1',
+                    label: 'curveOffset = -50', // the bending degree
+                    curveOffset: -50,
                 },
             ],
         };
@@ -61,22 +80,28 @@
             container: 'container',
             width,
             height,
+            linkCenter: true,
             // translate the graph to align the canvas's center, support by v3.5.1
             fitCenter: true,
             defaultNode: {
+                size: 45,
                 style: {
                     fill: '#DEE9FF',
                     stroke: '#5B8FF9',
                 },
             },
             defaultEdge: {
-                type: 'polyline',
+                type: 'arc',
                 style: {
                     stroke: '#F6BD16',
                 },
+                labelCfg: {
+                    autoRotate: true,
+                    refY: -10,
+                },
             },
             modes: {
-                // behavior
+                // 支持的 behavior
                 default: ['drag-node'],
             },
         });
