--- a/examples/03-元素/25-超长文本/25-超长文本-2.html
+++ b/examples/03-元素/25-超长文本/25-超长文本-2.html
@@ -95,7 +95,7 @@
                 {
                     source: 'node1',
                     target: 'node2',
-                    label: fittingString('Break the line if it is too long', 100, globalFontSize),
+                    label: fittingString('Break the line if it is too long,', 100, globalFontSize),
                     labelCfg: {
                         refY: 20,
                     },
