高亮相邻节点

--- a/examples/04-交互/28-高亮相邻节点/28-高亮相邻节点-1.html
+++ b/examples/04-交互/28-高亮相邻节点/28-高亮相邻节点-1.html
@@ -93,7 +93,7 @@
             },
             edgeStateStyles: {
                 active: {
-                    stroke: '#999',
+                    stroke: '#f00',
                 },
             },
         });
