--- a/examples/04-交互/34-节点集轮廓包裹/34-节点集轮廓包裹-1.html
+++ b/examples/04-交互/34-节点集轮廓包裹/34-节点集轮廓包裹-1.html
@@ -107,6 +107,14 @@
                 },
             },
         });
+
+    graph.node((node) => {
+        return {
+            ...node,
+            label: node.id.replace(/\D/g, '')
+        }
+    })
+
         graph.data({
             nodes,
             edges: data.edges.map(function (edge, i) {
