--- a/examples/04-交互/28-高亮相邻节点/28-高亮相邻节点-1.html
+++ b/examples/04-交互/28-高亮相邻节点/28-高亮相邻节点-1.html
@@ -21,8 +21,8 @@
             box-shadow: rgb(174, 174, 174) 0px 0px 10px;
         }
     </style>
-    <script src="../../lib/g6-3.8.5.min.js"></script>
-    <script src="../00-mock/xiaomi.js"></script>
+    <script src="../../../lib/g6-3.8.5.min.js"></script>
+    <script src="../../00-mock/xiaomi.js"></script>
 </head>
 
 <body>
