--- a/examples/02-一般图/07-力导向图/07-力导向图-3.html
+++ b/examples/02-一般图/07-力导向图/07-力导向图-3.html
@@ -11,8 +11,8 @@
             height: calc(100vh - 50px);
         }
     </style>
-    <script src="../../lib/g6-3.8.5.min.js"></script>
-    <script src="../00-mock/data-4-relations.js"></script>
+    <script src="../../../lib/g6-3.8.5.min.js"></script>
+    <script src="../../00-mock/data-4-relations.js"></script>
 </head>
 
 <body>
