--- a/examples/05-动画/45-状态切换/45-状态切换-1.html
+++ b/examples/05-动画/45-状态切换/45-状态切换-1.html
@@ -72,7 +72,8 @@
                             x: 0,
                             y: 0,
                             r: 5,
-                            fill: cfg.color || '#5B8FF9',
+                            // fill: cfg.color || '#5B8FF9',
+                            fill: '#f00',
                         },
                         name: 'circle-shape',
                     });
